# origindb

./: .gitignore  CHANGELOG.md  CLI_GUIDE.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_minimal.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  FEATURES.md  INSTALL.md  LICENSE  Makefile  PROJECT.md  PROTOTYPE_DEMO.md  QA_TESTING_GUIDE.md  README.md  WASM_MODULES.md  build.sh  cmake_install.cmake  compile_commands.json  docker-compose.yml  instantdb  instantdb.proto  instantdb_client  instantdb_init  test_module.hex  test_module.wasm  vcpkg.json
.github/workflows/: ci.yml  release.yml
benchmarks/: baseline.json
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: API.md  API_GUIDE.md  ARCHITECTURE.md  CSHARP_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GRPC_API.md  WASM_ABI.md  WASM_SUBSCRIPTIONS.md
docs/design/: durability.md  territories.md
docs/examples/: websocket_subscription_client.js
examples/board/: package.json  server.js
examples/board/public/: index.html
examples/collab/: index.html  package-lock.json  package.json  seed_hero.mjs  server.js  vite.config.js
examples/collab/public/: index.html
examples/collab/src/: App.jsx  app.css
examples/csharp/UserService/: Program.cs  README.md  UserService.csproj
examples/cubeio/: package.json  server.js
examples/cubeio/public/: game.js  index.html
examples/marbles/: bots.js  node_modules  package.json  run_rack.sh  server.js
examples/marbles/public/: game.js  index.html
examples/originlands/: package.json  server.js
examples/originlands/public/: index.html  main.js  net.js  worldgen.js
examples/territories/: aoitest.mjs  bots.js  package.json  server.js  wsload.mjs
examples/territories/public/: game.js  index.html
include/admin/: admin_service.h
include/changefeed/: changefeed_engine.h  predicate_evaluator.h  sql_subscription.h
include/cli/: command.h
include/cli/commands/: build_command.h  database_command.h  exec_command.h  init_command.h  logs_command.h  module_command.h  server_command.h
include/common/: auth.h  config.h  metrics.h
include/grpc/: auth_check.h  grpc_server.h  wasm_service_impl.h
include/modules/: module_store.h
include/net/: grpc_server.h  websocket_server.h
include/raft/: raft_node.h
include/sql/: sql_engine.h
include/storage/: mem_table.h  row_codec.h  snapshot.h  storage_engine.h  table.h  transaction_impl.h  wal.h  wal_impl.h
include/wasm/: host_api.h  module_store.h  tick_scheduler.h  wasm_engine.h  wasm_runtime.h  wasm_subscription.h
include/websocket/: binary_protocol.h  websocket_server.h
packaging/debian/: postinst  prerm
packaging/linux/: instantdb.service  origindb.service
packaging/shell/: instantdb.bash  origindb.bash
proto/: db.proto  instantdb.proto  origindb.proto  raft_internal.proto
scripts/: README.md  bench.sh  bench_compare.py  build-release.sh  deploy.sh  e2e_verify.sh  install.bat  install.ps1  install.sh  test-install.sh  ws_filter_check.py
scripts/web/: index.html  nginx.conf
sdk/cpp/: CMakeLists.txt  README.md  instantdb.hpp  origindb.hpp
sdk/cpp/examples/: counter_module.cpp  subscription_module.cpp
sdk/csharp/: InstantDB.cs  OriginDB.cs  README.md
sdk/csharp/Examples/: CounterModule.cs  SubscriptionModule.cs
sdk/typescript/: README.md  asconfig.json  package-lock.json  package.json
sdk/typescript/assembly/: env.ts  index.ts
sdk/typescript/examples/board/: asconfig.json  index.ts
sdk/typescript/tests/: smoke.mjs
src/changefeed/: changefeed_engine.cpp  predicate_evaluator.cpp  sql_subscription.cpp
src/cli/: cli_main.cpp
src/cli/commands/: build_command.cpp  database_command.cpp  exec_command.cpp  init_command.cpp  logs_command.cpp  module_command.cpp  server_command.cpp
src/cmd/: grpc_client.cpp  instantdb_cli.cpp  instantdb_init.cpp  instantdb_server.cpp  origindb_cli.cpp  origindb_init.cpp  origindb_server.cpp  prototype_demo.cpp  server_main.cpp  sql_demo.cpp
src/common/: auth.cpp  config.cpp  metrics.cpp
src/grpc/: grpc_server.cpp  wasm_service_impl.cpp
src/net/: websocket_server.cpp
src/raft/: raft_node.cpp
src/sql/: sql_engine.cpp
src/storage/: mem_table.cpp  row_codec.cpp  storage_engine.cpp  transaction_impl.cpp  wal_impl.cpp
src/wasm/: host_functions.cpp  module_store.cpp  tick_scheduler.cpp  wasm_engine.cpp  wasm_runtime_internal.h  wasm_subscription.cpp
src/websocket/: binary_protocol.cpp  websocket_server.cpp
tests/: storage_test.cpp
tests/performance/: CMakeLists.txt  instantdb_bench.cpp  origindb_bench.cpp  perf_test_runner.cpp  run_all_tests.sh  run_stress_test.sh
tests/performance/framework/: performance_test.cpp  performance_test.h
tests/performance/grpc/: grpc_load_test.cpp  grpc_load_test.h
tests/performance/scripts/: run_all_tests.sh
tests/performance/storage/: storage_perf_test.cpp  storage_perf_test.h
tests/performance/tools/: benchmark_compare.cpp  perf_monitor.cpp  storage_runner.cpp  test_data_generator.cpp
tests/performance/websocket/: binary_protocol_test.cpp  simple_websocket_test.cpp  simple_websocket_test.h  websocket_stress_test.cpp  websocket_stress_test.h
tests/unit/: changefeed_fanout_test.cpp  module_store_test.cpp  predicate_evaluator_test.cpp  row_codec_test.cpp  wal_durability_test.cpp
tests/wasm/: wasm_engine_test.cpp
tests/wasm/fixtures/: test_module.wat
tools/: wat2wasm_tool.cpp
unity/: CHANGELOG.md  LICENSE  README.md  package.json
unity/Editor/: InstantDBConfigEditor.cs  InstantDBEditor.asmdef  OriginDBConfigEditor.cs  OriginDBEditor.asmdef
unity/Runtime/: IInstantDBConnection.cs  IOriginDBConnection.cs  InstantDB.Unity.asmdef  InstantDBConfig.cs  InstantDBConnection.cs  InstantDBConnectionOptions.cs  InstantDBNetworkManager.cs  OriginDB.Unity.asmdef  OriginDBConfig.cs  OriginDBConnection.cs  OriginDBConnectionOptions.cs  OriginDBNetworkManager.cs  ReducerResult.cs
unity/Runtime/Models/: GameSession.cs  Player.cs  PlayerAction.cs
unity/Samples~/BasicConnection/: README.md  SampleGameManager.cs
(+10 files in other folders)
